adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, expedita. Reprehenderit aut ratione iste esse, aliquid quaerat vel deserunt dolorem itaque, dicta vitae soluta, temporibus fugiat cum. Ullam, deleniti libero.
+    </p>
+    <p>, ipsum dolor sit amet consectetur adipisicing elit. Distinctio labore deleniti repellendus eaque qui, dolorum laborum dignissimos quam numquam laboriosam in commodi magnam atque sunt sit? Corporis similique saepe dicta!</p>
 </body>
 </html>
